# rust-render-bench

./: Cargo.toml  readme.md
benches/: askama.rs  concat.rs  sailfish.rs  yew.rs
src/: askama.rs  concat.rs  lib.rs  sailfish.rs  yew.rs
templates/: page.html
